@@ -1,3 +1,9 @@
+2005-03-10  Bob Wilson  <bob.wilson@acm.org>
+
+	* config/tc-xtensa.c (finish_vinsn): Include the last instruction slot
+	when checking if xg_resolve_literals needs to be called.
+	* config/tc-xtensa.h: Fix spelling typo in a comment.
+
 2005-03-10  Jan Beulich  <jbeulich@novell.com>
 
 	* config/tc-tic54x.h (tic54x_macro_info): Change parameter type.
